...
            "value" : "Anmelden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Login"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Iniciar sesión"
...
            "value" : "Abmelden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logout"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar sesión"
...
            "value" : "Lösenorden matchar inte."
          }
        }
      }
    },
    "VALUE_ADD %@" : {
      "comment" : "A button that, when pressed, adds a new entry for a specific account key. The label inside the button is generated from the key's `name`.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ Hinzufügen"
...
