...

        public var errorDescription: String? {
            switch self {
            case .credentialsTaken:
                return "User Identifier is already taken"
            case .wrongCredentials:
                return "Credentials do not match"
            case .internalError:
                return "Internal Error"
            case .cancelled:
                return "Cancelled"
            }
        }
...
